<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProductActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarll"
        android:layout_above="@+id/bt_buy"
        android:scrollbars="none">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager_product_images"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/like"
                    android:text="@string/default_text"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/like"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/cards_heart_outline" />
            </RelativeLayout>

            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/default_text"/>

            <TextView
                android:id="@+id/product_pricex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:text="@string/default_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <RatingBar
                    android:id="@+id/product_rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:rating="3.7"
                    android:progressTint="#FFC240"
                    android:secondaryProgressTint="#00AAAAAA"
                    android:backgroundTint="@color/gray"
                    android:progressBackgroundTint="@color/gray"
                    android:foregroundTint="@color/gray"
                    style="?android:attr/ratingBarStyleIndicator"/>

                <TextView
                    android:id="@+id/product_nrates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:textColor="@color/gray"
                    android:text="@string/default_text"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/color"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>


            <TextView
                android:id="@+id/product_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/size"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_sizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/bt_buy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/red">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/buy"/>
    </RelativeLayout>



</RelativeLayout>